<resources>
    <string name="app_name">AppTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batdaukynghi">Bắt đầu kỳ nghỉ</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="hovaten">Họ và tên</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="xacnhanmatkhau">Xác nhận mật khẩu</string>
    <string name="dieukhoan">Điều khoản</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoactieptucvoi">Hoặc tiếp tục với</string>
    <string name="dangky">Đăng ký</string>
    <string name="ghinhotaikhoan">Ghi nhớ tài khoản</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="chaomungtrolai">Chào mừng trở lại</string>
    <string name="askai">Hỏi cùng AI</string>
</resources>